2002-11-07  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* cleaned the C++ version of the client library: removed FtsSymbol
	(now const char *), remove FtsServer (merged into FtsServerConnection).
	Client to FTS communication works. FTS to client not yet implemented.

2002-11-05  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* added the C++ version of the client library

2002-10-25  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* 4.0.0 released

2002-10-14  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* added . (dot) operator. Changed the grammar, the structure of the parse tree
	and the expression evaluator.

2002-10-10  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* implemented persistency (former keep property) for concerned objects (data, sequence, fts param, ...)
	* implemented named objects

2002-10-07  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* classes are objects
	* expressions can contain object expression (:class_name arg1 arg2 ...)
	at any level
	* hashtables key type is now a class

2002-10-06  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* reimplemented error objects as seperated class
	* reimplemented names and definitions (former variables) with hashtables in top level and template patcher 

2002-10-02  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* removed definitively metaclasses.
	* remove fts_object_new_to_patcher. Now, only 2 functions to create an object:
	fts_object_create and fts_eval_object_description

2002-10-02  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* removed properties related to the DSP subsystem
	* introduced fts_dsp_object_t as base structure for all DSP objects
	* changed API for DSP objects: fts_dsp_object_init(), fts_dsp_object_delete(), ...
	* adapted object set to DSP API changes

2002-09-30  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* changed bmax file magic number. It is now bMa2 (was bMax) and the 
	version number is passed to the loader. This is necessary for compatibility
	w.r.t. 2 things: