@@ -19,6 +19,9 @@
 // Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 // 
 
+#ifndef _BUFFER_H_
+#define _BUFFER_H_
+
 namespace ircam {
 namespace fts {
 namespace client {
@@ -71,3 +74,5 @@ namespace client {
 };
 };
 };
+
+#endif
